Make sure 4 cols fit in container w/o scrollbars

--- a/example/site.css
+++ b/example/site.css
@@ -119,7 +119,7 @@ section {
 
 .section-container {
   margin: 0 auto;
-  max-width: 50em;
+  max-width: 53em;
 }
 
 section .sub-title {
